--- a/package.json
+++ b/package.json
@@ -7,18 +7,37 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
+    "js-cookie": "^3.0.1",
+    "normalize.css": "^8.0.1",
+    "postcss-viewport-units": "^0.1.6",
+    "swiper": "^4.5.1",
+    "vant": "^2.12.44",
+    "viewport-units-buggyfill": "^0.6.2",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-clipboard2": "^0.3.3",
+    "vue-content-loader": "^0.2.3",
+    "vue-jsonp": "^2.0.0",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue-waterfall2": "^1.9.1",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.12",
+    "compression-webpack-plugin": "^10.0.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "postcss-loader": "^7.0.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
